--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a class="footer-link" href="https://amartyanambiar.github.io/personal/">Website</a>
       <p>© 2020 Amartya Nambiar.</p>
     </div>
 </html>
