--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <h3>Lorem ipsum dolor sit amet, non elit.</h3>
         <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
         <a class="btn" href="mailto:amartyanambiar@email.com">CONTACT ME</a>
+        <button type="button" onclick="document.getElementById('demo').innerHTML = Date()">Date and Time.</button>
       </div>
     </div>
 
